# libRPG

./: .gitignore  CMakeLists.txt  README.md  RUN.bat  SECURITY.md  STYLING.md
.github/ISSUE_TEMPLATE/: security-vulnerability.md
nvim/: init.lua  lazy-lock.json
nvim/lua/: vim-options.lua
nvim/lua/plugins/: alpha.lua  bamboo.lua  lsp-config.lua  lualine.lua  neo-tree.lua  telescope.lua  treesitter.lua
src/: Entity.cpp  Entity.h  Game.cpp  Game.h  InteractableObject.cpp  InteractableObject.h  Map.cpp  Map.h  Player.cpp  Player.h
test-game/: main.cpp
test-game/Assets/: InteractableObjects.xml
test-game/Assets/tiles/: Underworld.tsx  pspbrwse.jbf  test-tileset.tsx
test-game/Assets/tiles/World Tilemaps/: World1.csv  World1.tmx  World1.xml  World1Objects.xml  test-tilemap.tmx
test-game/Assets/tileset/: test-tileset.tsx
